bluejay-typegen/tests/validation_cases/error/invalid_custom_scalar_overrides.stderr
error: Custom scalar overrides must correspond to a path in the query that is a custom scalar type
  --> tests/validation_cases/error/invalid_custom_scalar_overrides.rs:22:9
   |
22 |         "MyQuery.myField" => super::MyScalarOverride,
   |         ^^^^^^^^^^^^^^^^^

error: Custom scalar overrides must correspond to a path in the query that is a custom scalar type
  --> tests/validation_cases/error/invalid_custom_scalar_overrides.rs:23:9
   |
23 |         "MyQuery.myOtherField" => ::std::primitive::i32,
   |         ^^^^^^^^^^^^^^^^^^^^^^

error: Custom scalar overrides must not borrow if the `borrow` option is not enabled
  --> tests/validation_cases/error/invalid_custom_scalar_overrides.rs:24:36
   |
24 |         "MyQuery.myScalarField" => super::StringCow<'a>,
   |                                    ^^^^^
